fix(arc-1099): add custom scrollbar for related objects on object detail
https://meemoo.atlassian.net/browse/ARC-1099

--- a/src/styles/pages/_object-detail.scss
+++ b/src/styles/pages/_object-detail.scss
@@ -182,6 +182,10 @@ $metadata-collapsed-width: 36vw;
 
 	&__related {
 		max-width: 100vw;
+
+		.ScrollbarsCustom-TrackY > .ScrollbarsCustom-Thumb {
+			background-color: $neutral !important;
+		}
 	}
 
 	&__metadata-list {
@@ -218,6 +222,12 @@ $metadata-collapsed-width: 36vw;
 
 		@include respond-at("md") {
 			padding: $spacer-lg;
+		}
+
+		ul {
+			display: block;
+			height: auto;
+			overflow: scroll;
 		}
 	}
 
